# ie

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  req.txt  setup.py
.github/workflows/: production build.yaml
app/: db_connector.py  main.py  redis.py  settings.py
app/models/: embarazo.py  pibyd.py
app/routes/api/: api.py
app/routes/gui/: gui.py
app/web/: index.html  script.js  style.css
app/web/assets/: index-Bdxv_mY1.js  index-BfhfOjPo.js  index-CezIp_OW.js  index-D99rs5pY.css  index-h6BKhpx8.css  index-noZ93VYF.js  index-nwMoHuFh.js  index-r9sLMWfq.js  index-yc8rBTW8.js
