[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ie"
version = "1.1"
authors = [
    {name="Nassh",email="yasnac@alum.us.es"}
]
description = "FastAPI powered backend for IE project"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENCE"}
dependencies = [
    "uvicorn[standart]",
    "fastapi[all]==0.110.1",
    "redis-om==0.2.2",
]


[tool.setuptools]
py-modules = ["app"]
